spacing fixes

--- a/_scss/base/_variables.scss
+++ b/_scss/base/_variables.scss
@@ -11,7 +11,7 @@ $width_hdtv: 1600px;
 $hidden_mobile: 639px;
 
 // Brand colors 
-$primary-color: teal !default;
+$primary-color: #222 !default;
 $secondary-color: lighten($primary-color, 10%) !default;
 
 // Text colors
@@ -35,8 +35,8 @@ $color_skype: #12A5F4;
 $color_sharethis: #01BF01;
 
 // Colors
-$navbar-color: #f4f4f4 !default;
-$navbar-border: #eee !default;
+$navbar-color: #eee !default;
+$navbar-border: #ddd !default;
 $navbar-font-color: #333 !default;
 $hero-bg-color: lighten($primary-color, 7%) !default;
 
@@ -51,8 +51,8 @@ $font-family: "Roboto", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, san
 
 //Grid Variables
 $container-width: 960px !default;
-$container-width-mobile: 560px !default;
-$container-width-phablet: 560px !default;
+$container-width-mobile: 85% !default;
+$container-width-phablet: 80% !default;
 $total-columns: 12 !default;
 $column-width: 100% / $total-columns !default; // calculates individual column width based off of # of columns
 $column-margin: 2.0rem !default; // space between columns calculated in grid
