--- a/_scss/components/_hero.scss
+++ b/_scss/components/_hero.scss
@@ -2,17 +2,17 @@
 //––––––––––––––––––––––––––––––––––––––––––––––––––
 .hero {
   background-color: $hero-bg-color;
-  // background: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.8)), url('https://dl.dropboxusercontent.com/u/60183450/featured01.jpg');
+  background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://placekitten.com/g/1920/1080');
   // background-image: url(https://dl.dropboxusercontent.com/u/60183450/featured01.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   text-align: center;
-  padding: ($navbar-height + 10rem) 0 10rem;
+  padding: ($navbar-height + 8rem) 0 8rem;
   // padding: 4rem 0;
 
   @include tablet {
-    padding: ($navbar-height + 18rem) 0 18rem;
+    padding: ($navbar-height + 12rem) 0 12rem;
     // padding: 8rem 0;
   }
 
