--- a/_scss/components/_navigation.scss
+++ b/_scss/components/_navigation.scss
@@ -57,13 +57,13 @@
   margin: 0 auto;
 
   @include mobile {
-    max-width: $container-width-mobile;
+    width: $container-width-mobile;
     margin: 0 auto;
     // padding: 0;
   }
 
   @include phablet {
-    max-width: $container-width-phablet;
+    width: $container-width-phablet;
   }
 
   @include tablet {
@@ -319,7 +319,7 @@ a.scrollup {
   position: fixed;
   bottom: 1em;
   right: 1em;
-  background: $navbar-color;
+  background: $primary-color;
   border: 1px solid #fff;
   transition: background-color $transistion_duration;
   color: #fff;
